# AMQPSerialize

./: CMakeLists.txt  README.md
cmake/: util.cmake
include/AMQPSerialize/: CMakeLists.txt  applyindextuple.h  createtopic.h  receiverMTFlow.h  receiverconfig.h  senderMTFlow.h  serializeamqp.h  typesamqp.h
include/structures/: browsecatalogproducts.h  catalogproducts.h  descprod.h  structqueue2.h  structsdsl.h
tests/recv/: CMakeLists.txt  filter_subject.cpp  recv.cpp
tests/sender/: CMakeLists.txt  selected_recv.cpp  unitCatch.cpp
tests/test1/: CMakeLists.txt  unitCatch.cpp
tests/test2/: CMakeLists.txt  main.cpp
